# libelectronic-id

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake-linux-fedora.yml  cmake-linux-ubuntu.yml  cmake-macos.yml  cmake-windows.yml  codeql.yml
include/electronic-id/: electronic-id.hpp  enums.hpp
lib/libpcsc-cpp/: CMakeLists.txt  README.md
lib/libpcsc-cpp/include/pcsc-cpp/: comp_winscard.hpp  pcsc-cpp-utils.hpp  pcsc-cpp.hpp
lib/libpcsc-cpp/src/: Context.hpp  Reader.cpp  SCardCall.hpp  SmartCard.cpp  listReaders.cpp  utils.cpp
lib/libpcsc-cpp/tests/integration/: test-pcsc-cpp.cpp
lib/libpcsc-cpp/tests/lib/libpcsc-mock/: CMakeLists.txt  README.md
lib/libpcsc-cpp/tests/lib/libpcsc-mock/include/pcsc-mock/: pcsc-mock.hpp
lib/libpcsc-cpp/tests/lib/libpcsc-mock/scripts/: clang-format.sh
lib/libpcsc-cpp/tests/lib/libpcsc-mock/src/: pcsc-mock.cpp
lib/libpcsc-cpp/tests/lib/libpcsc-mock/tests/: pcsc-mock-test.cpp
lib/libpcsc-cpp/tests/mock/: test-byte-vector-string-operator.cpp  test-connect-to-card-transmit-apdus.cpp  test-select-card-reader-and-card.cpp
scripts/: clang-format.sh
src/: autoSelectSupportedCard.cpp  availableSupportedCards.cpp  electronic-id.cpp
src/electronic-ids/: TLV.hpp  common.cpp  common.hpp  scope.hpp  x509.hpp
src/electronic-ids/ms-cryptoapi/: MsCryptoApiElectronicID.cpp  MsCryptoApiElectronicID.hpp  listMsCryptoApiElectronicIDs.cpp  listMsCryptoApiElectronicIDs.hpp
src/electronic-ids/pcsc/: EIDIDEMIA.cpp  EIDIDEMIA.hpp  EIDThales.cpp  EIDThales.hpp  EstEIDGemalto.cpp  EstEIDGemalto.hpp  EstEIDIDEMIA.cpp  EstEIDIDEMIA.hpp  EstEIDThales.hpp  FinEID.cpp  FinEID.hpp  LatEIDIDEMIACommon.hpp  LatEIDIDEMIAv1.cpp  LatEIDIDEMIAv1.hpp  LatEIDIDEMIAv2.cpp  LatEIDIDEMIAv2.hpp  PcscElectronicID.hpp  pcsc-common.hpp
src/electronic-ids/pkcs11/: PKCS11CardManager.hpp  Pkcs11ElectronicID.cpp  Pkcs11ElectronicID.hpp  pkcs11.h
tests/common/: selectcard.hpp  verify.hpp
tests/integration/: test-authenticate.cpp  test-get-certificate.cpp  test-signing.cpp
tests/mock/: atrs.hpp  select-certificate-script-EST-GEMALTO.hpp  select-certificate-script-EST-IDEMIA.hpp  select-certificate-script-FIN-V3.hpp  select-certificate-script-FIN-V4.hpp  select-certificate-script-LAT-V1.hpp  select-certificate-script-LAT-V2.hpp  select-certificate-script.hpp  test-autoselect-card.cpp  test-find-masked-atr.cpp  test-get-certificate.cpp  test-is-card-supported.cpp  test-pkcs11-token.cpp
